2003-04-15	ujwal

    * Implemented NSApplication delegate applicationDidUnide: 
      since a user reported problems after an unhide operation.

2003-04-11	fabian
    * Fixed a bug that causes iTerm to hang when illege UTF-8
      characters encountered. We now display a '#' whenever
      encoding translations failed
      
2003-04-11	ujwal

    * Setting cursor color to a mix of foreground and 
      background colors when window is inactive.

2003-04-10	fabian
    * Fixed some bugs in setNeedsDisplayInRect of PTYTextView
    * Removed background attributes when background is default
    * Fixed a email error on website

2003-04-10	ujwal

    * Put back in the code for not auto-scrolling down 
      on new output if the user has scrolled up. It had 
      been interfering with the vttest program. Now we 
      auto-scroll down whan the window size changes, so 
      vttest largely works.

2003-04-09	ujwal

    * Preliminary support for print-to-ansi.
    
    * Incorporated French nib files into project.

2003-04-08	fabian
    * Added French localization provided by Matt Anton
    
2003-04-07	ujwal

    * Fixed a namespace collision bug in PTYTask.
    
    * Fixed linewrap bug in VT100Screen.

2003-04-05	ujwal

    * Fixed write problem when prompted for passwords.
    
    * Now explicitly setting PATH to something sensible 
      since the default includes the user's home directory.
    
    * Implemented ESC [?40h (allow 132<->80 column mode).
    
2003-04-02	ujwal

    * Fixed a problem that was causing iTerm to hang when 
      a large piece of text was being pasted.

2003-04-01	fabian
    * Fixed a bug in text input
    * Applied the URL parsing into ARRAY code
    * Added an indictor in About box to show if iTerm is
      build under ARRAY mode or BUFFER mode
    
2003-04-01	ujwal

    * Now dynamically displaying window size as window is 
      being resized.

2003-03-31	ujwal

    * Made URL parsing in PTYTextView slightly more 
      intelligent.
